--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <spring.version>3.1.1.RELEASE</spring.version>
         <spring.security.version>3.1.0.RELEASE</spring.security.version>
         <spring.social.version>1.0.1.RELEASE</spring.social.version>
+        <spring.mobile.version>1.0.0.RC2</spring.mobile.version>
         <elasticsearch.version>0.19.2</elasticsearch.version>
         <aspectj.version>1.6.11</aspectj.version>
         <slf4j.version>1.5.8</slf4j.version>
@@ -224,7 +225,7 @@
         <dependency>
             <groupId>org.springframework.mobile</groupId>
             <artifactId>spring-mobile-device</artifactId>
-            <version>1.0.0.RC1</version>
+            <version>${spring.mobile.version}</version>
         </dependency>
     </dependencies>
     <build>
@@ -277,7 +278,7 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>8.0.4.v20111024</version>
                 <configuration>
-                    <!-- <scanIntervalSeconds>3</scanIntervalSeconds> -->
+                    <scanIntervalSeconds>30</scanIntervalSeconds>
                     <stopKey>stop-jetty</stopKey>
                     <stopPort>9999</stopPort>
                 </configuration>
