--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,11 +10,10 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 
 # Change the level of messages for various packages.
-log4j.logger.monitoring=DEBUG
+log4j.logger.monitoring=INFO
 log4j.logger.fr.ippon.tatami=DEBUG
 
-log4j.logger.me.prettyprint.cassandra=WARN
-log4j.logger.me.prettyprint.hom=WARN
+log4j.logger.me.prettyprint=WARN
 log4j.logger.net.sf.ehcache=WARN
 log4j.logger.org.apache=WARN
 log4j.logger.org.elasticsearch=WARN
