--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -1,5 +1,12 @@
+# tatami.version can (should) be used to version static resources and thus enable a long cache value.
 tatami.version=1.0-SNAPSHOT
-tatami.short.url.prefix=http://tt.mi/
+# tatami.short.url.prefix is the prefix used for short URL.
+# In a perfect world, a short domain name should be used, like to one proposed here.
+# This is totally possible in an enterprise network (just a DNS definition)
+#tatami.short.url.prefix=http://tt.mi/s/
+# The value 127.0.0.1 can only be used locally. Please change this for any
+# production deployment with a real IP or domain name
+tatami.short.url.prefix=http://127.0.0.1:8080/s/
 
 #Cassandra configuration
 cassandra.host=127.0.0.1:9160
