--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -6,6 +6,6 @@ cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
 
 #Elastic Search configuration
-elasticsearch.activated=false
+elasticsearch.activated=true
 elasticsearch.indexName=tatami
 elasticsearch.path.conf=
