--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <description>Tatami is a private Tweeter clone</description>
+    <description>Tatami is a private Twitter clone</description>
     <inceptionYear>2012</inceptionYear>
     <url>https://github.com/ippontech/tatami</url>
     <organization>
