--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,12 +11,12 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 
 # Change the level of messages for various packages.
 log4j.logger.monitoring=WARN
-log4j.logger.fr.ippon.tatami=WARN
+log4j.logger.fr.ippon.tatami=DEBUG
 
 log4j.logger.me.prettyprint=WARN
 log4j.logger.net.sf.ehcache=WARN
 log4j.logger.org.apache=WARN
-log4j.logger.org.elasticsearch=WARN
+log4j.logger.org.elasticsearch=INFO
 log4j.logger.org.hibernate.validator=WARN
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
